packages/pulse-core/force-app/main/default/objects/Conversation_Routing_Rule__mdt/Conversation_Routing_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Conversation Routing Rule</label>
    <pluralLabel>Conversation Routing Rules</pluralLabel>
</CustomObject>