packages/pulse-core/force-app/main/default/objects/Conversation_Routing_Rule__mdt/fields/Create_Defaults_JSON__c.field-meta.xml
<CustomField>
    <fullName>Create_Defaults_JSON__c</fullName>
    <label>Create Defaults JSON</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>