packages/pulse-core/force-app/main/default/objects/Conversation_Routing_Rule__mdt/fields/Match_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Match_Strategy__c</fullName>
    <label>Match Strategy</label>
    <type>Text</type>
    <length>80</length>
</CustomField>