packages/pulse-core/force-app/main/default/objects/Conversation_Routing_Rule__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>