packages/pulse-core/force-app/main/default/objects/Conversation_Routing_Rule__mdt/fields/Rule_Key__c.field-meta.xml
<CustomField>
    <fullName>Rule_Key__c</fullName>
    <label>Rule Key</label>
    <type>Text</type>
    <length>120</length>
    <unique>true</unique>
    <required>true</required>
</CustomField>