packages/pulse-core/force-app/main/default/objects/Conversation_Routing_Rule__mdt/fields/Source_Adapter__c.field-meta.xml
<CustomField>
    <fullName>Source_Adapter__c</fullName>
    <label>Source Adapter</label>
    <type>Text</type>
    <length>60</length>
</CustomField>