packages/pulse-core/force-app/main/default/objects/Conversation_Routing_Rule__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <label>Target Object</label>
    <type>Text</type>
    <length>80</length>
</CustomField>