packages/pulse-core/force-app/main/default/objects/Conversation_Routing_Rule__mdt/fields/Trigger_Workflow_Key__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Workflow_Key__c</fullName>
    <label>Trigger Workflow Key</label>
    <type>Text</type>
    <length>120</length>
</CustomField>